syntax = "proto3";

package protocol;

option go_package = "./protocol";

message LeaderElection {
  int32 id = 1;
  int32 message_type = 2;
}

