syntax = "proto3";

package protocol;

option go_package = "./protocol";

message SyncMessage {
  int32 node_id = 1;
  bool is_leader = 2;
  int32 action = 3;
}

